--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Marvel App</title>
+    <title>Animal Crossing</title>
   </head>
   <body>
     <div id="root"></div>
